fix: address SonarCloud bug and code smells
- Fix int-to-long overflow in RdfFetcher (10L * 1024 * 1024)
- Extract duplicated string literals to constants
- Reduce cognitive complexity: split importGraphItems, nodeToRow, generate
- Remove redundant null checks, nested ternaries, empty catch blocks
- Use Stream.toList(), parameterized tests, try-with-resources